# aoc-rust-2023

./: Cargo.toml
src/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  lib.rs  main.rs
src/day_1/: mod.rs  puzzle_1.rs  puzzle_2.rs
src/day_1/puzzle_1/: tests.rs
src/day_1/puzzle_2/: tests.rs
src/day_2/: game.rs  puzzle_1.rs  puzzle_2.rs
src/day_2/game/: tests.rs
src/day_2/puzzle_1/: tests.rs
src/day_2/puzzle_2/: tests.rs
src/day_3/: puzzle_1.rs  puzzle_2.rs  schematic.rs
src/day_3/puzzle_1/: tests.rs
src/day_3/puzzle_2/: tests.rs
src/day_3/schematic/: tests.rs
src/day_4/: puzzle_1.rs  puzzle_2.rs  scratchcard.rs
src/day_4/puzzle_1/: tests.rs
src/day_4/puzzle_2/: tests.rs
src/day_4/scratchcard/: tests.rs
tests/: day_1.rs  day_2.rs  day_3.rs  day_4.rs
